[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cron-converter"
version = "1.2.1"
authors = [
  { name="Andrea Salvatori", email="16443598+Sonic0@users.noreply.github.com " },
]
description = "Cron string parser and scheduler for Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "python-dateutil"
]

[project.optional-dependencies]
test = ["python-dateutil"]
mypy = [
    "mypy",
    "types-python-dateutil"
]

[project.urls]
Homepage = "https://github.com/Sonic0/cron-converter"
Issues = "https://github.com/Sonic0/cron-converter/issues"

[tool.isort]
profile = "black"
src_paths = ["cron_converter", "tests"]
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
exclude = ['build/*', 'docs/*', 'examples/*', 'tests/*']
